--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
         android:layout_height="match_parent">
 
         <android.support.design.widget.AppBarLayout
+            android:id="@+id/main_appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
@@ -26,7 +27,6 @@
                 android:layout_width="match_parent"
                 app:layout_scrollFlags="scroll|enterAlways|snap"
                 android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
                 app:popupTheme="@android:style/ThemeOverlay.Material.Light"/>
             <android.support.design.widget.TabLayout
                 android:id="@+id/main_tab_layout"
