--- a/app/src/main/res/layout/activity_artist.xml
+++ b/app/src/main/res/layout/activity_artist.xml
@@ -8,8 +8,7 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:id="@+id/artist_actionbar">
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
         <android.support.v7.widget.Toolbar
             android:id="@+id/artist_toolbar"
             android:layout_width="match_parent"
