--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,6 @@
         android:layout_height="match_parent">
 
         <android.support.design.widget.AppBarLayout
-            android:id="@+id/main_appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
@@ -80,11 +79,10 @@
                 android:id="@+id/album_art"
                 android:src="@drawable/default_art"
                 android:contentDescription="@string/album_art" />
-            <RelativeLayout
+            <android.support.design.widget.CoordinatorLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:clickable="true"
-                android:id="@+id/scroll_view">
+                android:clickable="true">
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -202,8 +200,9 @@
                     android:clipToPadding="false"
                     android:background="@color/windowBackground"
                     android:layout_below="@id/control_holder"
-                    android:id="@+id/playing_list"/>
-            </RelativeLayout>
+                    android:id="@+id/playing_list"
+                    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"/>
+            </android.support.design.widget.CoordinatorLayout>
         </LinearLayout>
 
         <RelativeLayout
