Improve playing list some more * Also add the base for in-app purchases (don't panic, its just a donation button (gotta make money somehow))

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,11 +82,12 @@
             <android.support.design.widget.CoordinatorLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:id="@+id/holder"
+                android:background="@color/colorAccent"
                 android:clickable="true">
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/colorAccent"
                     android:id="@+id/control_holder">
 
                     <TextView
