--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -7,7 +7,7 @@
     android:clickable="true"
     android:foreground="@drawable/unbounded_ripple"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/real_background"
+    android:id="@+id/background"
     android:elevation="2dp"
     app:elevation="2dp"
     app:cardCornerRadius="2dp">
