Rearrange alot of stuff * Also add an animated play/pause button (Thanks @kabouzeid) * Planning on completely changing the player screen and moving it to its own fragment

--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.dominionos.music.ui.layouts.activity.MainActivity">
+    tools:context=".ui.activity.MainActivity">
     <item
         android:id="@+id/play_all"
         android:title="@string/play_all"
