New player screen * I'm working on a completely new way to connect to the service, almost completely factoring out broadcast intents :D * As you can see, this is very incomplete, if you want to build and install this, please tell me if there is any lag

--- a/app/src/main/res/layout/album.xml
+++ b/app/src/main/res/layout/album.xml
@@ -16,10 +16,10 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
         <ImageView
-            android:id="@+id/grid_art"
+            android:id="@+id/album_art"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/grid_view_album_art_height"
-            android:scaleType="centerCrop"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
             android:src="@drawable/default_art"
             android:transitionName="albumArt"
             android:contentDescription="@string/album_art" />
