--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -2,16 +2,18 @@
 <resources>
 
     <!-- Light colour palette -->
-    <color name="colorPrimary">#3E4147</color>
-    <color name="colorPrimaryDark">#2A2C31</color>
+    <color name="colorPrimary">#212121</color>
+    <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#FFD50000</color>
     <color name="cardBackground">@color/colorAccent</color>
     <color name="windowBackground">#FFFAFAFA</color>
+    <color name="contentColour">#FFFFFFFF</color>
     <color name="primaryTextLight">@android:color/primary_text_light</color>
     <color name="secondaryTextLight">@android:color/secondary_text_light</color>
 
     <!-- Dark colour palette -->
     <color name="darkWindowBackground">#303030</color>
+    <color name="darkContentColour">#FF424242</color>
     <color name="primaryTextDark">@android:color/primary_text_dark</color>
     <color name="secondaryTextDark">@android:color/secondary_text_dark</color>
 </resources>
