--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
     app:umanoScrollableView="@+id/playing_list"
     app:umanoDragView="@+id/album_art_holder"
     app:umanoParallaxOffset="100dp"
-    app:umanoPanelHeight="72dp">
+    app:umanoPanelHeight="72dp"
+    app:umanoInitialState="hidden">
 
     <!-- Main content -->
     <android.support.design.widget.CoordinatorLayout
