--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -109,7 +109,6 @@
             android:id="@+id/playing_art"
             android:layout_width="72dp"
             android:layout_height="72dp"
-            android:padding="16dp"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:contentDescription="@string/album_art"
@@ -131,10 +130,12 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:orientation="vertical"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
             android:layout_toStartOf="@+id/playing_bar_action"
             android:layout_toEndOf="@+id/playing_art">
             <TextView
-                android:id="@+id/song_item_name"
+                android:id="@+id/playing_song_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
@@ -143,7 +144,7 @@
                 android:textSize="16sp" />
 
             <TextView
-                android:id="@+id/song_item_desc"
+                android:id="@+id/playing_song_desc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
