--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/player_view"
-    tools:context="com.dominionos.music.ui.fragments.PlayerFragment">
+    tools:context="com.mnmlos.music.ui.fragments.PlayerFragment">
     <!-- Player screen -->
     <LinearLayout
         android:layout_width="match_parent"
