--- a/app/src/main/res/layout/song.xml
+++ b/app/src/main/res/layout/song.xml
@@ -31,16 +31,13 @@
         tools:ignore="ContentDescription" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:id="@+id/song_text_holder"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_alignParentStart="true"
         android:orientation="vertical"
-        android:paddingStart="72dp"
-        android:paddingEnd="0dp"
         android:layout_toEndOf="@id/song_item_art"
-        android:layout_toStartOf="@id/playing_bar_action"
-        tools:ignore="RelativeOverlap">
+        android:layout_toStartOf="@id/playing_bar_action">
         <TextView
             android:id="@+id/song_item_name"
             android:layout_width="wrap_content"
