--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -2,6 +2,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <android.support.v7.preference.PreferenceCategory
+        android:title="Playback">
+        <android.support.v7.preference.ListPreference
+            android:entries="@array/playback_speed"
+            android:entryValues="@array/playback_speed"
+            android:key="playback_speed"
+            android:defaultValue="1.0x"
+            android:summary="Set the players speed"
+            android:title="Playback speed" />
+    </android.support.v7.preference.PreferenceCategory>
+
+    <android.support.v7.preference.PreferenceCategory
         android:title="@string/appearance">
         <android.support.v7.preference.SwitchPreferenceCompat
             android:key="dark_theme"
