Temporarily disable the 'Play All' button * Also remove the 'Reset App' option in Settings * Merge the 'Lock screen' and 'Appearance' categories in Settings * Better support for keyboard navigation changes for O

--- a/app/src/main/res/layout/activity_playlist.xml
+++ b/app/src/main/res/layout/activity_playlist.xml
@@ -34,5 +34,6 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
         android:clickable="true"
+        android:focusable="true"
         android:src="@drawable/ic_add" />
 </android.support.design.widget.CoordinatorLayout>
