--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -76,6 +76,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:clickable="true"
+        android:focusable="true"
         android:elevation="12dp"
         android:src="@drawable/ic_play"
         app:backgroundTint="@color/colorAccent"
