--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -20,38 +20,39 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:contentScrim="@color/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
-                <ImageView
-                    android:id="@+id/album_art"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:fitsSystemWindows="true"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/default_art"
-                    android:transitionName="albumArt"
-                    app:layout_collapseMode="parallax"
-                    android:contentDescription="@string/album_art" />
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/image_inner_shadow"
-                    android:fitsSystemWindows="true"
-                    app:layout_collapseMode="parallax" />
+            <ImageView
+                android:id="@+id/album_art"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleType="fitCenter"
+                android:fitsSystemWindows="true"
+                android:src="@drawable/default_art"
+                android:transitionName="albumArt"
+                app:layout_collapseMode="parallax"
+                android:contentDescription="@string/album_art" />
 
-                <View
-                    android:id="@+id/title_background"
-                    android:layout_width="match_parent"
-                    android:layout_height="92dp"
-                    android:background="@color/colorPrimary"
-                    android:layout_gravity="bottom"
-                    android:layout_alignBottom="@id/album_art"
-                    app:layout_collapseMode="pin"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/image_inner_shadow"
+                android:fitsSystemWindows="true"
+                app:layout_collapseMode="parallax" />
 
-                <android.support.v7.widget.Toolbar
-                    android:id="@+id/toolbar_album"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    app:layout_collapseMode="pin" />
+            <View
+                android:id="@+id/title_background"
+                android:layout_width="match_parent"
+                android:layout_height="92dp"
+                android:background="@color/colorPrimary"
+                android:layout_gravity="bottom"
+                android:layout_alignBottom="@id/album_art"
+                app:layout_collapseMode="pin"/>
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar_album"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin" />
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
