--- a/app/src/main/res/layout/album.xml
+++ b/app/src/main/res/layout/album.xml
@@ -15,14 +15,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <ImageView
-            android:id="@+id/album_art"
+        <android.support.percent.PercentFrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:src="@drawable/default_art"
-            android:transitionName="albumArt"
-            android:contentDescription="@string/album_art" />
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/album_art"
+                android:src="@drawable/default_art"
+                android:transitionName="albumArt"
+                android:contentDescription="@string/album_art"
+                android:scaleType="centerCrop"
+                app:layout_widthPercent="100%"
+                app:layout_aspectRatio="100%"/>
+        </android.support.percent.PercentFrameLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
