Java8 Adaptations * Spot whats coming next ;)

--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -64,7 +64,7 @@
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
         android:clipToPadding="false"
-        android:background="@color/windowBackground"
+        android:background="@color/lightWindowBackground"
         android:numColumns="auto_fit"
         app:fastScrollThumbColor="@color/colorAccent"
         app:fastScrollPopupBgColor="@color/colorAccent"
