--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
             android:id="@+id/main_viewpager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/windowBackground"
+            android:background="@color/lightWindowBackground"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
         <com.lapism.searchview.SearchView
