Fix status bar coloring * Clearly needs optimisation, but accent color changing first

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:gravity="bottom"
     android:id="@+id/sliding_layout"
+    android:fitsSystemWindows="true"
     app:umanoScrollableView="@+id/playing_list"
     app:umanoDragView="@+id/album_art_holder"
     app:umanoPanelHeight="72dp"
