--- a/app/src/main/res/xml/prefs_appearance.xml
+++ b/app/src/main/res/xml/prefs_appearance.xml
@@ -1,5 +1,4 @@
-<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <android.support.v7.preference.PreferenceCategory
         android:title="@string/appearance">
