Fix dark mode for settings

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,12 +8,12 @@
         <item name="windowActionBar">false</item>
         <item name="android:windowActionBarOverlay">true</item>
         <item name="windowNoTitle">true</item>
-        <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
+        <item name="preferenceTheme">@style/PreferenceTheme.Light</item>
         <item name="android:windowBackground">@color/lightWindowBackground</item>
         <item name="android:colorBackground">@color/lightWindowBackground</item>
         <item name="android:windowActivityTransitions">true</item>
         <item name="android:windowContentTransitions">true</item>
-        <item name="drawerArrowStyle">@style/DrawerArrowStyle.Light</item>
+        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
         <item name="colorControlNormal">@android:color/primary_text_dark</item>
         <item name="material_drawer_selected_text">@color/colorAccent</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
@@ -27,23 +27,30 @@
         <item name="windowActionBar">false</item>
         <item name="android:windowActionBarOverlay">true</item>
         <item name="windowNoTitle">true</item>
-        <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
+        <item name="preferenceTheme">@style/PreferenceTheme.Dark</item>
         <item name="android:windowBackground">@color/darkWindowBackground</item>
         <item name="android:colorBackground">@color/darkWindowBackground</item>
         <item name="android:windowActivityTransitions">true</item>
         <item name="android:windowContentTransitions">true</item>
-        <item name="drawerArrowStyle">@style/DrawerArrowStyle.Dark</item>
+        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
         <item name="colorControlNormal">@android:color/primary_text_dark</item>
         <item name="material_drawer_selected_text">@color/colorAccent</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
-    <style name="DrawerArrowStyle.Light" parent="Widget.AppCompat.DrawerArrowToggle">
-        <item name="color">@color/primaryTextDark</item>
+    <style name="PreferenceTheme.Light" parent="@style/PreferenceThemeOverlay.v14.Material">
+        <item name="android:windowBackground">@color/lightWindowBackground</item>
+        <item name="android:background">@color/lightWindowBackground</item>
     </style>
-    <style name="DrawerArrowStyle.Dark" parent="Widget.AppCompat.DrawerArrowToggle">
-        <item name="color">@color/primaryTextLight</item>
+
+    <style name="PreferenceTheme.Dark" parent="@style/PreferenceThemeOverlay.v14.Material">
+        <item name="android:windowBackground">@color/darkWindowBackground</item>
+        <item name="android:background">@color/darkWindowBackground</item>
+    </style>
+
+    <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
+        <item name="color">@color/primaryTextDark</item>
     </style>
 
     <style name="AppTheme.BrandedLaunch" parent="AppTheme.Light">
