--- a/app/src/main/res/layout/album.xml
+++ b/app/src/main/res/layout/album.xml
@@ -41,7 +41,7 @@
                 android:maxLines="1"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:textColor="@color/primaryTextLight"
+                android:textColor="@color/primaryTextDark"
                 android:textSize="16sp"
                 android:ellipsize="end"/>
 
@@ -52,7 +52,7 @@
                 android:maxLines="1"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentBottom="true"
-                android:textColor="@color/secondaryTextLight"
+                android:textColor="@color/secondaryTextDark"
                 android:textSize="12sp"
                 android:ellipsize="end"/>
         </RelativeLayout>
