--- a/app/src/main/res/xml/prefs_appearance.xml
+++ b/app/src/main/res/xml/prefs_appearance.xml
@@ -1,22 +1,30 @@
-<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <android.support.v7.preference.PreferenceCategory
+    <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
+        app:ateKey_prefCategory_textColor="accent_color"
         android:title="@string/appearance">
-        <android.support.v7.preference.SwitchPreferenceCompat
+        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
             android:key="lock_screen_art"
             android:title="@string/lock_screen_art"
             android:summary="@string/lock_screen_art_summary"
-            android:defaultValue="true" />
+            android:defaultValue="true"
+            android:persistent="true"
+            app:ateKey_pref_switch="accent_color" />
 
-        <android.support.v7.preference.SwitchPreferenceCompat
+        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
             android:key="dark_theme"
             android:title="@string/dark_mode"
-            android:defaultValue="false" />
+            android:persistent="true"
+            android:defaultValue="false"
+            app:ateKey_pref_switch="accent_color"/>
 
-        <android.support.v7.preference.SwitchPreferenceCompat
+        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
             android:key="substratum_theme"
             android:title="Follow substratum theme"
-            android:defaultValue="false" />
+            android:defaultValue="false"
+            android:persistent="true"
+            app:ateKey_pref_switch="accent_color"/>
 
         <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEColorPreference
             android:key="primary_color"
@@ -27,6 +35,6 @@
             android:key="accent_color"
             android:persistent="false"
             android:title="Accent color" />
-    </android.support.v7.preference.PreferenceCategory>
+    </com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>
 
 </android.support.v7.preference.PreferenceScreen>
