--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,10 +49,11 @@
             app:layout_behavior="com.lapism.searchview.SearchBehavior" />
 
         <android.support.design.widget.FloatingActionButton
-            android:layout_width="56dp"
-            android:layout_height="56dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/fab"
-            android:layout_margin="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="48dp"
             android:src="@drawable/ic_add"
             app:backgroundTint="@color/colorAccent"
             app:layout_anchor="@id/main_viewpager"
