--- a/app/src/main/res/layout/song.xml
+++ b/app/src/main/res/layout/song.xml
@@ -23,8 +23,7 @@
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:background="@drawable/unbounded_ripple"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
+        android:focusable="true"
         android:layout_margin="-16dp"
         android:padding="16dp"
         android:src="@drawable/ic_overflow_dark"
